Task/12 unified getter setter (#65)
* feat: unify getters/setters (#12)